@@ -8,7 +8,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-image-sandbox</artifactId>
-  <version>1.0.5</version>
+  <version>1.0.6</version>
 
   <name>Vavi Imaging Sandbox API</name>
   <organization>
@@ -28,15 +28,8 @@ TODO
   </issueManagement>
 
   <properties>
-    <rococoa.version>0.8.5</rococoa.version>
+    <brew.prefix>/opt/homebrew</brew.prefix>
   </properties>
-
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <url>https://maven.pkg.github.com/umjammer/vavi-image-sandbox</url>
-    </repository>
-  </distributionManagement>
 
   <profiles>
     <profile>
@@ -44,7 +37,6 @@ TODO
       <activation>
         <os>
           <family>mac</family>
-          <arch>x86_64</arch>
         </os>
         <property>
           <name>env.JITPACK</name>
@@ -56,38 +48,45 @@ TODO
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M7</version>
+            <version>3.2.2</version>
             <configuration>
               <trimStackTrace>false</trimStackTrace>
               <argLine>
-                -Djava.library.path=${project.build.directory}
-                -Djna.library.path=${project.build.directory}
+                -Djava.library.path=${brew.prefix}/lib:${project.build.testOutputDirectory}
+                -Djna.library.path=${brew.prefix}/lib:${project.build.testOutputDirectory}
                 -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
+                --add-opens java.desktop/sun.java2d=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>local</id>
+      <activation>
+        <file>
+          <exists>${basedir}/local.properties</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.3.0</version>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.1.0</version>
             <executions>
               <execution>
-                <id>copy</id>
-                <phase>generate-resources</phase>
+                <id>read-properties</id>
+                <phase>initialize</phase>
                 <goals>
-                  <goal>copy</goal>
+                  <goal>read-project-properties</goal>
                 </goals>
                 <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.rococoa</groupId>
-                      <artifactId>rococoa-core</artifactId>
-                      <type>dylib</type>
-                      <overWrite>false</overWrite>
-                      <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
-                      <destFileName>librococoa.dylib</destFileName>
-                    </artifactItem>
-                  </artifactItems>
+                  <files>
+                    <file>${basedir}/local.properties</file>
+                  </files>
                 </configuration>
               </execution>
             </executions>
@@ -97,31 +96,33 @@ TODO
     </profile>
 
     <profile>
+      <!-- mvn -P magick antrun:run [-Dmagick='file'] -->
       <id>magick</id>
-      <activation>
-        <property>
-          <name>magick</name>
-          <value/>
-        </property>
-      </activation>
       <build>
         <plugins>
           <plugin>
-            <!-- exec:exec -->
-            <!-- $ mvn -P magick exec:java -Dexec.args='"file"' -->
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
+            <!-- GOOD: fork: OK, test jars: OK, user args, default args: OK -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>3.1.0</version>
+            <goals>
+              <goal>run</goal>
+            </goals>
             <configuration>
-              <mainClass>ImageMagickFilter</mainClass>
-              <classpathScope>test</classpathScope>
+              <target>
+                <java classname="ImageMagickFilter" fork="true">
+                  <classpath>
+                    <path refid="maven.compile.classpath"/>
+                    <path refid="maven.test.classpath"/>
+                  </classpath>
+                  <jvmarg value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties" />
+                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf" />
+                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true" />
+                  <jvmarg value="-Dapple.awt.application.name=この世の深淵を覗いたとき、僕たちは明日を照らすはずの神が可能性の涙を見誤っていることを知り、絶望することさえも許されずただ彷徨い続ける。" />
+                  <jvmarg value="-Djna.library.path=${brew.prefix}/lib:/usr/local/lib" />
+                  <jvmarg value="-DImageMagickFilter.path=${brew.prefix}/bin" />
+                </java>
+              </target>
             </configuration>
           </plugin>
         </plugins>
@@ -129,6 +130,7 @@ TODO
     </profile>
 
     <profile>
+      <!-- mvn -P wmr antrun:run -Dwmr='file' -Dext='jpg' -->
       <id>wmr</id>
       <activation>
         <property>
@@ -136,29 +138,40 @@ TODO
           <value/>
         </property>
       </activation>
+      <properties>
+        <ext>jpg</ext>
+      </properties>
       <build>
         <plugins>
           <plugin>
-            <!-- exec:exec -->
-            <!-- $ mvn -P wmr exec:java -Dexec.args='"dir1" "dir2"' -->
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>3.1.0</version>
+            <goals>
+              <goal>run</goal>
+            </goals>
             <configuration>
-              <mainClass>WaterMarkRemover</mainClass>
-              <classpathScope>test</classpathScope>
-              <arguments>
-                <argument>-Xmx3G</argument>
-              </arguments>
+              <target>
+                <java classname="WaterMarkRemover" fork="true">
+                  <classpath>
+                    <path refid="maven.compile.classpath"/>
+                    <path refid="maven.test.classpath"/>
+                  </classpath>
+                  <jvmarg value="-Xmx3G" />
+                  <jvmarg value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties" />
+                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf" />
+                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true" />
+                  <jvmarg value="-Dapple.awt.application.name=ImageMagickFilter" />
+                  <jvmarg value="-Djna.library.path=${brew.prefix}/lib" />
+                  <arg value="${wmr}" />
+                  <arg value="${wmr}_new" />
+                  <arg value="${ext}" />
+                  <arg value="${ext}" />
+                </java>
+              </target>
             </configuration>
           </plugin>
+
         </plugins>
       </build>
     </profile>
@@ -169,38 +182,22 @@ TODO
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.11.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <encoding>UTF-8</encoding>
-<!--
+          <source>17</source>
+          <target>17</target>
           <compilerArgs>
-            <arg>-XDignore.symbol.file</arg>
+            <arg>--add-exports</arg>
+            <arg>java.desktop/sun.java2d=ALL-UNNAMED</arg>
+            <arg>--add-modules</arg>
+            <arg>java.logging</arg>
+            <arg>--add-modules</arg>
+            <arg>java.desktop</arg>
+            <arg>--add-modules</arg>
+            <arg>java.xml</arg>
           </compilerArgs>
--->
         </configuration>
       </plugin>
-<!--
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
-        <version>1.0.0</version>
-        <executions>
-          <execution>
-            <phase>initialize</phase>
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-                <file>local.properties</file>
-              </files>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
--->
     </plugins>
   </build>
 
@@ -209,7 +206,7 @@ TODO
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.9.1</version>
+        <version>5.10.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -218,26 +215,18 @@ TODO
 
   <repositories>
     <repository>
-      <id>github</id>
-      <url>https://maven.pkg.github.com/umjammer/*</url>
-    </repository>
-    <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
     </repository>
-    <repository>
-      <id>umjammer-mvn-repo</id>
-      <url>https://raw.github.com/umjammer/umjammer/mvn-repo/</url>
-    </repository>
-    <repository>
+    <repository> <!-- for jai-codec -->
       <id>jboss thirdparty</id>
       <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
     </repository>
-    <repository>
+    <repository> <!-- for jogl -->
       <id>clojars</id>
       <url>https://repo.clojars.org/</url>
     </repository>
-    <repository>
+    <repository> <!-- for vavi-image-enlarge-noids -->
       <id>gitlab-maven</id>
       <url>https://gitlab.com/api/v4/projects/39904024/packages/maven</url>
     </repository>
@@ -247,37 +236,50 @@ TODO
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.10</version>
     </dependency>
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-image</artifactId>
-      <version>1.0.10</version>
+      <version>1.0.12</version>
     </dependency>
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons-sandbox</artifactId>
-      <version>0.4.2</version>
+      <version>0.4.4</version>
     </dependency>
     <dependency>
-      <groupId>org.rococoa</groupId>
-      <artifactId>rococoa-core</artifactId>
-      <version>${rococoa.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.rococoa</groupId>
+      <groupId>com.github.umjammer.rococoa</groupId> <!-- org.rococoa / com.github.umjammer.rococoa -->
       <artifactId>rococoa-cocoa</artifactId>
-      <version>${rococoa.version}</version>
+      <version>0.8.7</version>
     </dependency>
     <dependency>
       <groupId>net.sf.barcode4j</groupId>
       <artifactId>barcode4j</artifactId>
       <version>2.1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>ant</artifactId>
+          <groupId>org.apache.ant</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
+<dependency>
+  <artifactId>ant</artifactId>
+  <groupId>org.apache.ant</groupId>
+  <version>1.10.13</version>
+</dependency>
+
     <dependency>
       <groupId>avalon-framework</groupId>
       <artifactId>avalon-framework-api</artifactId>
       <version>4.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.mortennobel</groupId>
@@ -285,20 +287,20 @@ TODO
       <version>0.8.6</version>
     </dependency>
     <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.2.2</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.4</version>
     </dependency>
     <dependency>
       <groupId>vavi</groupId>
       <artifactId>vavi-image-enlarge-noids</artifactId>
-      <version>0.0.1</version>
+      <version>0.0.2</version>
     </dependency>
 
     <dependency>
       <groupId>com.formdev</groupId>
       <artifactId>flatlaf</artifactId>
-      <version>2.6</version>
+      <version>3.3</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -319,30 +321,32 @@ TODO
     </dependency>
 
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
-      <version>1.7.36</version>
+      <version>2.0.9</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
+      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
       <artifactId>vavi-awt</artifactId>
-      <version>1.0.6</version>
+      <version>1.0.7</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.openpnp</groupId>
       <artifactId>opencv</artifactId>
-      <version>4.5.5-1</version>
+      <version>4.8.1-0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv-platform</artifactId>
+      <version>1.5.9</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>jai-imageio-jpeg2000</artifactId>
@@ -380,7 +384,7 @@ TODO
       <version>2.18.0</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <dependency> <!-- dylib is too old -->
       <groupId>net.java.dev.jogl</groupId>
       <artifactId>jogl-macosx-universal</artifactId>
       <version>1.1.1a</version>
